Added sketch for Demonstration of Progress.

--- a/stack.yaml
+++ b/stack.yaml
@@ -28,7 +28,7 @@ packages:
 - '.'
 # Dependency packages to be pulled from upstream that are not in the resolver
 # (e.g., acme-missiles-0.3)
-extra-deps: [alex-3.1.7]
+extra-deps: [alex-3.1.7, hdocs-0.5.0.1]
 
 # Override default flag values for local packages and extra-deps
 flags: {}
