--- a/absol.cabal
+++ b/absol.cabal
@@ -25,6 +25,7 @@ library
                       , filepath
                       , containers
                       , parsec
+  build-tools:          alex
   default-language:     Haskell2010
   default-extensions:   MagicHash
                       , NegativeLiterals
@@ -87,10 +88,14 @@ executable absol
   hs-source-dirs:       app
   main-is:              Main.hs
   ghc-options:          -threaded -rtsopts -with-rtsopts=-N
+  other-modules:        Cmdargs
   build-depends:        base
                       , absol
                       , text
+                      , filepath
+                      , optparse-applicative
   default-language:     Haskell2010
+  default-extensions:   OverloadedStrings
 
 test-suite absol-test
   type:                 exitcode-stdio-1.0
