--- a/absol.cabal
+++ b/absol.cabal
@@ -29,63 +29,62 @@ library
                       , parsec
   build-tools:          alex
   default-language:     Haskell2010
-  default-extensions:   MagicHash
-                      , NegativeLiterals
-                      , NumDecimals
+  default-extensions:   ApplicativeDo
+                      , BangPatterns
                       , BinaryLiterals
-                      , PatternGuards
-                      , ViewPatterns
-                      , RecursiveDo
-                      , ApplicativeDo
-                      , ParallelListComp
-                      , TransformListComp
-                      , MonadComprehensions
-                      , PostfixOperators
-                      , TupleSections
-                      , LambdaCase
-                      , EmptyCase
-                      , MultiWayIf
-                      , UnboxedTuples
-                      , ExistentialQuantification
-                      , GADTSyntax
-                      , GADTs
+                      , ConstrainedClassMethods
+                      , ConstraintKinds
+                      , DataKinds
+                      , DefaultSignatures
+                      , DeriveAnyClass
+                      , DeriveDataTypeable
+                      , DeriveFoldable
+                      , DeriveFunctor
+                      , DeriveGeneric
+                      , DeriveLift
+                      , DeriveTraversable
                       , DisambiguateRecordFields
                       , DuplicateRecordFields
-                      , RecordWildCards
-                      , DeriveGeneric
-                      , DeriveFunctor
-                      , DeriveFoldable
-                      , DeriveTraversable
-                      , DeriveDataTypeable
-                      , DeriveLift
-                      , DeriveAnyClass
-                      , PatternSynonyms
-                      , MultiParamTypeClasses
+                      , EmptyCase
+                      , ExistentialQuantification
+                      , ExplicitForAll
                       , FlexibleContexts
-                      , ConstrainedClassMethods
-                      , DefaultSignatures
-                      , FunctionalDependencies
                       , FlexibleInstances
+                      , FunctionalDependencies
+                      , GADTs
+                      , GADTSyntax
+                      , ImplicitParams
                       , InstanceSigs
-                      , OverloadedStrings
+                      , KindSignatures
+                      , LambdaCase
+                      , MagicHash
+                      , MonadComprehensions
+                      , MultiParamTypeClasses
+                      , MultiWayIf
+                      , NamedWildCards
+                      , NegativeLiterals
+                      , NumDecimals
                       , OverloadedLabels
                       , OverloadedLists
-                      , TypeFamilies
-                      , DataKinds
-                      , TypeInType
-                      , ConstraintKinds
-                      , ExplicitForAll
-                      , KindSignatures
-                      , ScopedTypeVariables
-                      , TypeApplications
-                      , ImplicitParams
-                      , RankNTypes
+                      , OverloadedStrings
+                      , ParallelListComp
                       , PartialTypeSignatures
-                      , NamedWildCards
-                      , TemplateHaskell
-                      , BangPatterns
+                      , PatternGuards
+                      , PatternSynonyms
+                      , PostfixOperators
+                      , RankNTypes
+                      , RecordWildCards
+                      , RecursiveDo
+                      , ScopedTypeVariables
                       , StaticPointers
-
+                      , TemplateHaskell
+                      , TransformListComp
+                      , TupleSections
+                      , TypeApplications
+                      , TypeFamilies
+                      , TypeInType
+                      , UnboxedTuples
+                      , ViewPatterns
 executable absol
   hs-source-dirs:       app
   main-is:              Main.hs
@@ -93,23 +92,12 @@ executable absol
   other-modules:        Cmdargs
   build-depends:        base
                       , absol
-                      , text
-                      , filepath
                       , optparse-applicative
-  default-language:     Haskell2010
   default-extensions:   OverloadedStrings
-                      , LambdaCase
-                      , MultiWayIf
-
 test-suite absol-test
   type:                 exitcode-stdio-1.0
   hs-source-dirs:       test
   main-is:              Spec.hs
-  build-depends:        base
-                      , absol
-  ghc-options:          -threaded -rtsopts -with-rtsopts=-N
-  default-language:     Haskell2010
-
 source-repository head
   type:                 git
   location:             https://github.com/iamrecursion/absol
