--- a/stack.yaml
+++ b/stack.yaml
@@ -4,7 +4,7 @@
 # For advanced use and comprehensive documentation of the format, please see:
 # http://docs.haskellstack.org/en/stable/yaml_configuration/
 
-resolver: lts-7.18
+resolver: lts-8.2
 
 # User packages to be built.
 # Various formats can be used as shown in the example below.
@@ -28,7 +28,7 @@ packages:
 - '.'
 # Dependency packages to be pulled from upstream that are not in the resolver
 # (e.g., acme-missiles-0.3)
-extra-deps: [hdocs-0.5.0.1]
+extra-deps: []
 
 # Override default flag values for local packages and extra-deps
 flags: {}
