--- a/absol.cabal
+++ b/absol.cabal
@@ -17,72 +17,74 @@ library
   hs-source-dirs:       src/
   exposed-modules:      Absol,
                         Absol.Metagen,
+                        Absol.Metagen.Utilities,
                         Absol.Metalex,
                         Absol.Metaparse,
-                        Absol.Metaverify
+                        Absol.Metaparse.Grammar,
+                        Absol.Metaverify,
+                        Absol.Utilities
   build-depends:        base >= 4.7 && < 5
                       , text
                       , filepath
                       , containers
-                      , parsec
-  build-tools:          alex
+                      , megaparsec
   default-language:     Haskell2010
-  default-extensions:   MagicHash
-                      , NegativeLiterals
-                      , NumDecimals
+  default-extensions:   ApplicativeDo
+                      , BangPatterns
                       , BinaryLiterals
-                      , PatternGuards
-                      , ViewPatterns
-                      , RecursiveDo
-                      , ApplicativeDo
-                      , ParallelListComp
-                      , TransformListComp
-                      , MonadComprehensions
-                      , PostfixOperators
-                      , TupleSections
-                      , LambdaCase
-                      , EmptyCase
-                      , MultiWayIf
-                      , UnboxedTuples
-                      , ExistentialQuantification
-                      , GADTSyntax
-                      , GADTs
+                      , ConstrainedClassMethods
+                      , ConstraintKinds
+                      , DataKinds
+                      , DefaultSignatures
+                      , DeriveAnyClass
+                      , DeriveDataTypeable
+                      , DeriveFoldable
+                      , DeriveFunctor
+                      , DeriveGeneric
+                      , DeriveLift
+                      , DeriveTraversable
                       , DisambiguateRecordFields
                       , DuplicateRecordFields
-                      , RecordWildCards
-                      , DeriveGeneric
-                      , DeriveFunctor
-                      , DeriveFoldable
-                      , DeriveTraversable
-                      , DeriveDataTypeable
-                      , DeriveLift
-                      , DeriveAnyClass
-                      , PatternSynonyms
-                      , MultiParamTypeClasses
+                      , EmptyCase
+                      , ExistentialQuantification
+                      , ExplicitForAll
                       , FlexibleContexts
-                      , ConstrainedClassMethods
-                      , DefaultSignatures
-                      , FunctionalDependencies
                       , FlexibleInstances
+                      , FunctionalDependencies
+                      , GADTs
+                      , GADTSyntax
+                      , ImplicitParams
                       , InstanceSigs
-                      , OverloadedStrings
+                      , KindSignatures
+                      , LambdaCase
+                      , MagicHash
+                      , MonadComprehensions
+                      , MultiParamTypeClasses
+                      , MultiWayIf
+                      , NamedWildCards
+                      , NegativeLiterals
+                      , NumDecimals
                       , OverloadedLabels
                       , OverloadedLists
-                      , TypeFamilies
-                      , DataKinds
-                      , TypeInType
-                      , ConstraintKinds
-                      , ExplicitForAll
-                      , KindSignatures
-                      , ScopedTypeVariables
-                      , TypeApplications
-                      , ImplicitParams
-                      , RankNTypes
+                      , OverloadedStrings
+                      , ParallelListComp
                       , PartialTypeSignatures
-                      , NamedWildCards
-                      , TemplateHaskell
-                      , BangPatterns
+                      , PatternGuards
+                      , PatternSynonyms
+                      , PostfixOperators
+                      , RankNTypes
+                      , RecordWildCards
+                      , RecursiveDo
+                      , ScopedTypeVariables
                       , StaticPointers
+                      , TemplateHaskell
+                      , TransformListComp
+                      , TupleSections
+                      , TypeApplications
+                      , TypeFamilies
+                      , TypeInType
+                      , UnboxedTuples
+                      , ViewPatterns
 
 executable absol
   hs-source-dirs:       app
@@ -91,11 +93,10 @@ executable absol
   other-modules:        Cmdargs
   build-depends:        base
                       , absol
-                      , text
-                      , filepath
                       , optparse-applicative
-  default-language:     Haskell2010
+                      , text
   default-extensions:   OverloadedStrings
+  default-language:     Haskell2010
 
 test-suite absol-test
   type:                 exitcode-stdio-1.0
@@ -103,7 +104,6 @@ test-suite absol-test
   main-is:              Spec.hs
   build-depends:        base
                       , absol
-  ghc-options:          -threaded -rtsopts -with-rtsopts=-N
   default-language:     Haskell2010
 
 source-repository head
