Further Parser Development
* Refactored identifiers to be specific and check syntax properly.

* Added indirection for parser in preparation for adding state.

* Added state to the parser.

* Completed sketch of the algorithm for verification.

* Added state to the parser.

--- a/absol.cabal
+++ b/absol.cabal
@@ -22,6 +22,9 @@ library
                         Absol.Metaparse,
                         Absol.Metaparse.Grammar,
                         Absol.Metaparse.Utilities,
+                        Absol.Metaparse.Parser,
+                        Absol.Metaspec,
+                        Absol.Metaspec.Special,
                         Absol.Metaverify,
                         Absol.Utilities
   build-depends:        base >= 4.7 && < 5
@@ -29,6 +32,7 @@ library
                       , filepath
                       , containers
                       , megaparsec
+                      , mtl
   default-language:     Haskell2010
   default-extensions:   ApplicativeDo
                       , BangPatterns
