Added verification of environment input rules.

--- a/absol.cabal
+++ b/absol.cabal
@@ -27,6 +27,7 @@ library
                         Absol.Metaspec.Special,
                         Absol.Metaverify,
                         Absol.Metaverify.Collate,
+                        Absol.Metaverify.Diagnostics,
                         Absol.Metaverify.RuleTag,
                         Absol.Metaverify.State,
                         Absol.Utilities
