--- a/absol.cabal
+++ b/absol.cabal
@@ -1,5 +1,5 @@
 name:                absol
-version:             0.0.1.0
+version:             0.2.0.0
 synopsis:            Automatic Builder for Semantically Oriented Languages
 description:         Please see README.md
 homepage:            https://github.com/iamrecursion/absol#readme
@@ -15,8 +15,7 @@ cabal-version:       >=1.10
 
 library
   hs-source-dirs:       src/
-  exposed-modules:      Absol,
-                        Absol.Metagen,
+  exposed-modules:      Absol.Metagen,
                         Absol.Metagen.Utilities,
                         Absol.Metalex,
                         Absol.Metaparse,
@@ -26,6 +25,10 @@ library
                         Absol.Metaspec,
                         Absol.Metaspec.Special,
                         Absol.Metaverify,
+                        Absol.Metaverify.Collate,
+                        Absol.Metaverify.Diagnostics,
+                        Absol.Metaverify.RuleTag,
+                        Absol.Metaverify.State,
                         Absol.Utilities
   build-depends:        base >= 4.7 && < 5
                       , text
@@ -33,6 +36,7 @@ library
                       , containers
                       , megaparsec
                       , mtl
+                      , parallel
   default-language:     Haskell2010
   default-extensions:   ApplicativeDo
                       , BangPatterns
@@ -100,6 +104,9 @@ executable absol
                       , absol
                       , optparse-applicative
                       , text
+                      , time
+                      , directory
+                      , filepath
   default-extensions:   OverloadedStrings
   default-language:     Haskell2010
 
